--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -82,6 +82,21 @@
                 <Setter Property="Fill" Value="{ThemeResource SystemControlBackgroundListLowBrush}" />
             </Style>
 
+
+
+            <Style TargetType="TimePickerFlyoutPresenter">
+                <Setter Property="Width" Value="150" />
+                <Setter Property="MinWidth" Value="150" />
+                <Setter Property="MaxWidth" Value="150" />
+                <Setter Property="MaxHeight" Value="398" />
+                <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}" />
+                <Setter Property="FontWeight" Value="Bold" />
+                <Setter Property="IsTabStop" Value="False" />
+                <Setter Property="Background" Value="Red" />
+                <Setter Property="HorizontalAlignment" Value="Center" />
+                <Setter Property="HorizontalContentAlignment" Value="Center" />
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
 
