--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -34,6 +34,9 @@
             <x:Double x:Key="MediumWidthBreakpoint">600</x:Double>
             <x:Double x:Key="LargeWidthBreakpoint">800</x:Double>
 
+            <x:Double x:Key="SmallHeightBreakpoint">0</x:Double>
+            <x:Double x:Key="MediumHeightBreakpoint">500</x:Double>
+
             <vm:ViewModelLocator x:Key="Locator" />
 
             <converters:DoubleToGridLengthConverter x:Key="DoubleToGridLengthConverter" />
