--- a/OneDo/View/NoteEditor.xaml
+++ b/OneDo/View/NoteEditor.xaml
@@ -890,7 +890,7 @@
             <VisualStateGroup x:Name="WindowStates">
                 <VisualState x:Name="WideState">
                     <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="{StaticResource MediumWidthBreakpoint}" />
+                        <AdaptiveTrigger MinWindowHeight="{StaticResource MediumHeightBreakpoint}" MinWindowWidth="{StaticResource MediumWidthBreakpoint}" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="Root.HorizontalAlignment" Value="Right" />
@@ -906,7 +906,7 @@
                 </VisualState>
                 <VisualState x:Name="NarrowState">
                     <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="0" />
+                        <AdaptiveTrigger MinWindowWidth="{StaticResource SmallWidthBreakpoint}" />
                     </VisualState.StateTriggers>
                 </VisualState>
             </VisualStateGroup>
