--- a/OneDo/View/SettingsView.xaml
+++ b/OneDo/View/SettingsView.xaml
@@ -28,7 +28,7 @@
                 </VisualState>
                 <VisualState x:Name="NarrowState">
                     <VisualState.StateTriggers>
-                        <AdaptiveTrigger MinWindowWidth="0" />
+                        <AdaptiveTrigger MinWindowWidth="{StaticResource SmallWidthBreakpoint}" />
                     </VisualState.StateTriggers>
                 </VisualState>
             </VisualStateGroup>
