--- a/OneDo/View/NoteEditor.xaml
+++ b/OneDo/View/NoteEditor.xaml
@@ -749,13 +749,13 @@
                         <ColumnDefinition Width="48" />
                     </Grid.ColumnDefinitions>
                     <Rectangle Grid.ColumnSpan="2" Fill="{x:Bind VM.IsFlagged, Mode=OneWay, Converter={StaticResource TitleBackgroundConverter}}" />
-                    <TextBox Grid.Column="0"
+                    <TextBox x:Name="TitleTextBox"
+                             Grid.Column="0"
                              Margin="16,6,0,4"
                              VerticalAlignment="Center"
                              Style="{StaticResource BorderlessTextBoxStyle}"
                              FontSize="18"
                              FontWeight="Medium"
-                             behaviors:TextBoxBehavior.FocusOnLoad="{x:Bind VM.IsNew}"
                              PlaceholderText="Title"
                              Text="{Binding Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                              TextWrapping="Wrap" />
