--- a/OneDo/View/NoteListControl.xaml
+++ b/OneDo/View/NoteListControl.xaml
@@ -1,19 +1,20 @@
-﻿<v:ExtendedUserControl x:Class="OneDo.View.NoteListControl"
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                       xmlns:behaviors="using:OneDo.View.Behaviors"
-                       xmlns:controls="using:OneDo.View.Controls"
-                       xmlns:converters="using:OneDo.View.Converters"
-                       xmlns:i="using:Microsoft.Xaml.Interactivity"
-                       xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
-                       xmlns:v="using:OneDo.View"
-                       xmlns:vm="using:OneDo.ViewModel"
-                       xmlns:vmItems="using:OneDo.ViewModel.Items"
-                       x:Name="Root"
-                       DataContext="{Binding NoteList, Source={StaticResource Locator}}"
-                       mc:Ignorable="d">
+﻿<mvvm:ExtendedUserControl x:Class="OneDo.View.NoteListControl"
+                          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                          xmlns:behaviors="using:OneDo.View.Behaviors"
+                          xmlns:controls="using:OneDo.View.Controls"
+                          xmlns:converters="using:OneDo.View.Converters"
+                          xmlns:i="using:Microsoft.Xaml.Interactivity"
+                          xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
+                          xmlns:mvvm="using:OneDo.Common.Mvvm"
+                          xmlns:v="using:OneDo.View"
+                          xmlns:vm="using:OneDo.ViewModel"
+                          xmlns:vmItems="using:OneDo.ViewModel.Items"
+                          x:Name="Root"
+                          DataContext="{Binding NoteList, Source={StaticResource Locator}}"
+                          mc:Ignorable="d">
 
     <UserControl.Resources>
 
@@ -210,4 +211,4 @@
         </StackPanel>
     </Grid>
 
-</v:ExtendedUserControl>
+</mvvm:ExtendedUserControl>
