--- a/OneDo/View/FolderListControl.xaml
+++ b/OneDo/View/FolderListControl.xaml
@@ -1,17 +1,18 @@
-﻿<v:ExtendedUserControl x:Class="OneDo.View.FolderListControl"
-                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                       xmlns:behaviors="using:OneDo.View.Behaviors"
-                       xmlns:controls="using:OneDo.View.Controls"
-                       xmlns:converters="using:OneDo.View.Converters"
-                       xmlns:i="using:Microsoft.Xaml.Interactivity"
-                       xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
-                       xmlns:v="using:OneDo.View"
-                       xmlns:vm="using:OneDo.ViewModel"
-                       DataContext="{Binding FolderList, Source={StaticResource Locator}}"
-                       mc:Ignorable="d">
+﻿<mvvm:ExtendedUserControl x:Class="OneDo.View.FolderListControl"
+                          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                          xmlns:behaviors="using:OneDo.View.Behaviors"
+                          xmlns:controls="using:OneDo.View.Controls"
+                          xmlns:converters="using:OneDo.View.Converters"
+                          xmlns:i="using:Microsoft.Xaml.Interactivity"
+                          xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
+                          xmlns:mvvm="using:OneDo.Common.Mvvm"
+                          xmlns:v="using:OneDo.View"
+                          xmlns:vm="using:OneDo.ViewModel"
+                          DataContext="{Binding FolderList, Source={StaticResource Locator}}"
+                          mc:Ignorable="d">
 
     <UserControl.Resources>
 
@@ -393,4 +394,4 @@
               ItemsSource="{x:Bind VM.Items, Mode=OneWay}"
               SelectedItem="{x:Bind VM.SelectedItem, Mode=TwoWay, Converter={StaticResource ChangeTypeConverter}}" />
 
-</v:ExtendedUserControl>
+</mvvm:ExtendedUserControl>
