--- a/OneDo/View/LogView.xaml
+++ b/OneDo/View/LogView.xaml
@@ -1,11 +1,11 @@
-﻿<v:ModalView x:Class="OneDo.View.LogView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:v="using:OneDo.View"
-             DataContext="{Binding Log, Source={StaticResource Locator}}"
-             mc:Ignorable="d">
+﻿<vcore:ModalView x:Class="OneDo.View.LogView"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:vcore="using:OneDo.View.Core"
+                 DataContext="{Binding Log, Source={StaticResource Locator}}"
+                 mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
@@ -16,11 +16,11 @@
                   Padding="6"
                   FontSize="12"
                   ItemsSource="{x:Bind VM.Items, Mode=OneWay}"
-                  SelectionChanged="Log_SelectionChanged"
                   ScrollViewer.HorizontalScrollBarVisibility="Auto"
                   ScrollViewer.HorizontalScrollMode="Enabled"
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
                   ScrollViewer.VerticalScrollMode="Enabled"
+                  SelectionChanged="Log_SelectionChanged"
                   SelectionMode="Extended">
             <ListView.Resources>
                 <Style TargetType="ListViewItem">
@@ -57,4 +57,4 @@
         </CommandBar>
     </Grid>
 
-</v:ModalView>
+</vcore:ModalView>
