--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -4,9 +4,9 @@
              xmlns:converters="using:OneDo.View.Converters"
              xmlns:vm="using:OneDo.ViewModel"
              RequestedTheme="Light">
-
     <Application.Resources>
         <ResourceDictionary>
+
             <ResourceDictionary.ThemeDictionaries>
                 <ResourceDictionary x:Key="Light">
                     <Color x:Key="FlagForegroundColor">#E32A34</Color>
@@ -29,6 +29,13 @@
                 <ResourceDictionary Source="Themes/FlyoutMenuStyles.xaml" />
                 <ResourceDictionary Source="Themes/AppBarStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <Color x:Key="SystemAccentColorLight3">#000000</Color>
+            <Color x:Key="SystemAccentColorLight2">#000000</Color>
+            <Color x:Key="SystemAccentColorLight1">#000000</Color>
+            <Color x:Key="SystemAccentColorDark1">#000000</Color>
+            <Color x:Key="SystemAccentColorDark2">#000000</Color>
+            <Color x:Key="SystemAccentColorDark3">#000000</Color>
 
             <x:Double x:Key="SmallWidthBreakpoint">0</x:Double>
             <x:Double x:Key="MediumWidthBreakpoint">600</x:Double>
@@ -87,5 +94,4 @@
 
         </ResourceDictionary>
     </Application.Resources>
-
 </Application>
