--- a/OneDo/Themes/Generic.xaml
+++ b/OneDo/Themes/Generic.xaml
@@ -1,146 +1,12 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="using:OneDo.View.Controls"
-                    xmlns:i="using:Microsoft.Xaml.Interactivity"
-                    xmlns:ic="using:Microsoft.Xaml.Interactions.Core"
-                    xmlns:im="using:Microsoft.Xaml.Interactions.Media"
-                    xmlns:vcore="using:OneDo.View.Core"
-                    xmlns:v="using:OneDo.View">
+                    xmlns:vcore="using:OneDo.View.Core">
 
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="ms-appx:///Themes/Styles/InfoBar.xaml" />
         <ResourceDictionary Source="ms-appx:///Themes/Styles/TimePicker.xaml" />
+        <ResourceDictionary Source="ms-appx:///Themes/Styles/SlidableListItem.xaml" />
     </ResourceDictionary.MergedDictionaries>
-
-    <Style TargetType="controls:SlidableListItem">
-        <Setter Property="VerticalAlignment" Value="Stretch" />
-        <Setter Property="Background" Value="Transparent" />
-        <Setter Property="ActivatedOffset" Value="16" />
-        <Setter Property="ActivationOffset" Value="72" />
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="controls:SlidableListItem">
-                    <Grid BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
-                        <Grid x:Name="CommandContainer">
-                            <Border x:Name="LeftCommandPanel">
-                                <StackPanel HorizontalAlignment="Left"
-                                            VerticalAlignment="Center"
-                                            Orientation="Horizontal">
-                                    <FontIcon VerticalAlignment="Center"
-                                              Foreground="{TemplateBinding LeftForeground}"
-                                              FontSize="16"
-                                              Glyph="{TemplateBinding LeftGlyph}" />
-                                    <TextBlock Margin="10,0,0,0"
-                                               VerticalAlignment="Center"
-                                               Foreground="{TemplateBinding LeftForeground}"
-                                               FontSize="14"
-                                               Text="{TemplateBinding LeftLabel}" />
-                                </StackPanel>
-                            </Border>
-                            <Border x:Name="RightCommandPanel">
-                                <StackPanel HorizontalAlignment="Right"
-                                            VerticalAlignment="Center"
-                                            Orientation="Horizontal">
-                                    <TextBlock Margin="0,0,10,0"
-                                               VerticalAlignment="Center"
-                                               Foreground="{TemplateBinding RightForeground}"
-                                               FontSize="14"
-                                               Text="{TemplateBinding RightLabel}" />
-                                    <FontIcon VerticalAlignment="Center"
-                                              Foreground="{TemplateBinding RightForeground}"
-                                              FontSize="16"
-                                              Glyph="{TemplateBinding RightGlyph}" />
-                                </StackPanel>
-                            </Border>
-                        </Grid>
-                        <Grid x:Name="ContentPanel"
-                              Background="{TemplateBinding Background}"
-                              ManipulationMode="TranslateX,System">
-                            <ContentPresenter />
-                        </Grid>
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <Style TargetType="controls:InfoBar">
-        <Setter Property="ActionText" Value="Undo" />
-        <Setter Property="ActionGlyph" Value="&#xE10E;" />
-        <Setter Property="Background" Value="{ThemeResource SystemControlBackgroundAccentBrush}" />
-        <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundChromeWhiteBrush}" />
-        <Setter Property="Height" Value="48" />
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="controls:InfoBar">
-                    <Grid x:Name="PART_RootGrid" Background="{TemplateBinding Background}">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition Width="Auto" />
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Margin="16,0"
-                                   HorizontalAlignment="Left"
-                                   VerticalAlignment="Center"
-                                   Style="{ThemeResource BodyTextBlockStyle}"
-                                   Foreground="{TemplateBinding Foreground}"
-                                   Text="{TemplateBinding Text}" />
-                        <Button Grid.Column="1"
-                                Height="{TemplateBinding Height}"
-                                Background="Transparent"
-                                Foreground="{TemplateBinding Foreground}"
-                                Command="{TemplateBinding ActionCommand}"
-                                CommandParameter="{TemplateBinding ActionCommandParameter}"
-                                Visibility="{Binding IsActionVisible, RelativeSource={RelativeSource Mode=TemplatedParent}, Converter={StaticResource BoolToVisibilityConverter}}">
-                            <Button.Template>
-                                <ControlTemplate TargetType="Button">
-                                    <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
-                                        <ContentPresenter x:Name="ContentPresenter"
-                                                          Padding="16,0"
-                                                          HorizontalContentAlignment="Stretch"
-                                                          VerticalContentAlignment="Stretch"
-                                                          BorderBrush="{TemplateBinding BorderBrush}"
-                                                          BorderThickness="{TemplateBinding BorderThickness}"
-                                                          AutomationProperties.AccessibilityView="Raw"
-                                                          Content="{TemplateBinding Content}"
-                                                          ContentTemplate="{TemplateBinding ContentTemplate}"
-                                                          ContentTransitions="{TemplateBinding ContentTransitions}" />
-                                        <VisualStateManager.VisualStateGroups>
-                                            <VisualStateGroup x:Name="CommonStates">
-                                                <VisualState x:Name="Normal" />
-                                                <VisualState x:Name="PointerOver">
-                                                    <Storyboard>
-                                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootGrid" Storyboard.TargetProperty="Background">
-                                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlBackgroundListLowBrush}" />
-                                                        </ObjectAnimationUsingKeyFrames>
-                                                    </Storyboard>
-                                                </VisualState>
-                                                <VisualState x:Name="Pressed">
-                                                    <Storyboard>
-                                                        <ObjectAnimationUsingKeyFrames Storyboard.TargetName="RootGrid" Storyboard.TargetProperty="Background">
-                                                            <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlBackgroundListMediumBrush}" />
-                                                        </ObjectAnimationUsingKeyFrames>
-                                                    </Storyboard>
-                                                </VisualState>
-                                            </VisualStateGroup>
-                                        </VisualStateManager.VisualStateGroups>
-                                    </Grid>
-                                </ControlTemplate>
-                            </Button.Template>
-                            <StackPanel Orientation="Horizontal">
-                                <FontIcon Margin="0,0,8,0"
-                                          HorizontalAlignment="Center"
-                                          FontSize="16"
-                                          Glyph="{TemplateBinding ActionGlyph}" />
-                                <TextBlock HorizontalAlignment="Left"
-                                           VerticalAlignment="Center"
-                                           Style="{ThemeResource BodyTextBlockStyle}"
-                                           Text="{TemplateBinding ActionText}" />
-                            </StackPanel>
-                        </Button>
-                    </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
 
     <Style TargetType="vcore:ModalContainer">
         <Setter Property="Background" Value="{ThemeResource ModalContainerBackgroundBrush}" />
